--- a/app/src/main/res/layout-land/fragment.xml
+++ b/app/src/main/res/layout-land/fragment.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".ui.Fragment">
 
     <TextView
             android:id="@+id/view_title"
@@ -17,19 +17,19 @@
             android:padding="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="52dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
             android:id="@+id/view_left_valute"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="67dp"
             tools:text="японская йена НННН"
-            android:textSize="15dp"
+            android:textSize="20dp"
             android:padding="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/button_refresh"
-            android:layout_marginTop="99dp"
+            android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/view_title"
             app:layout_constraintVertical_bias="0.0"/>
 
@@ -38,10 +38,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="росийский рубль КККК"
-            android:textSize="15dp"
+            android:textSize="20dp"
             android:padding="20dp"
             app:layout_constraintBottom_toTopOf="@+id/button_refresh"
-            android:layout_marginTop="99dp"
+            android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/view_title"
             app:layout_constraintVertical_bias="0.0"
             app:layout_constraintEnd_toEndOf="parent"/>
