--- a/app/src/main/res/layout/fragment.xml
+++ b/app/src/main/res/layout/fragment.xml
@@ -5,48 +5,46 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
-
+        tools:context=".ui.Fragment">
 
     <TextView
             android:id="@+id/view_title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="Курс валюты ЦБРФ от 11ю33ю33"
             android:textSize="25dp"
+            android:gravity="center"
             android:padding="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-    />
+            android:layout_marginTop="52dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
     <TextView
             android:id="@+id/view_left_valute"
             android:layout_width="wrap_content"
-            android:layout_height="67dp"
+            android:layout_height="wrap_content"
             tools:text="японская йена НННН"
-            android:textSize="20dp"
+            android:textSize="15dp"
             android:padding="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/button_refresh"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="99dp"
             app:layout_constraintTop_toBottomOf="@+id/view_title"
-            app:layout_constraintVertical_bias="0.0"
-    />
+            app:layout_constraintVertical_bias="0.0"/>
+
     <TextView
             android:id="@+id/view_right_valute"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="росийский рубль КККК"
-            android:textSize="20dp"
+            android:textSize="15dp"
             android:padding="20dp"
             app:layout_constraintBottom_toTopOf="@+id/button_refresh"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="99dp"
             app:layout_constraintTop_toBottomOf="@+id/view_title"
             app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintEnd_toEndOf="parent"
-    />
-
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
             android:id="@+id/view_left_value"
@@ -58,7 +56,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view_left_valute"/>
 
-
     <TextView
             android:id="@+id/view_right_value"
             android:layout_width="wrap_content"
@@ -67,9 +64,7 @@
             android:textSize="40dp"
             android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view_right_valute"
-    />
-
+            app:layout_constraintTop_toBottomOf="@+id/view_right_valute"/>
 
     <Button android:id="@+id/button_refresh"
             android:layout_width="wrap_content"
@@ -80,7 +75,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view_title"
             app:layout_constraintVertical_bias="0.685"/>
-
 
     <ProgressBar
             android:id="@+id/progress_bar"
