--- a/app/src/main/res/layout/fragment.xml
+++ b/app/src/main/res/layout/fragment.xml
@@ -11,7 +11,7 @@
             android:id="@+id/view_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="Курс валюты ЦБРФ от 11ю33ю33"
+            android:text="@string/text_title"
             android:textSize="25dp"
             android:gravity="center"
             android:padding="20dp"
@@ -24,11 +24,11 @@
             android:id="@+id/view_left_valute"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="японская йена НННН"
+            android:text="@string/text_left_valute"
             android:textSize="15dp"
             android:padding="20dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/button_refresh"
+            app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
             android:layout_marginTop="99dp"
             app:layout_constraintTop_toBottomOf="@+id/view_title"
             app:layout_constraintVertical_bias="0.0"/>
@@ -37,10 +37,10 @@
             android:id="@+id/view_right_valute"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="росийский рубль КККК"
+            android:text="@string/text_right_valute"
             android:textSize="15dp"
             android:padding="20dp"
-            app:layout_constraintBottom_toTopOf="@+id/button_refresh"
+            app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
             android:layout_marginTop="99dp"
             app:layout_constraintTop_toBottomOf="@+id/view_title"
             app:layout_constraintVertical_bias="0.0"
@@ -50,7 +50,7 @@
             android:id="@+id/view_left_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="100"
+            android:text="@string/text_left_value"
             android:textSize="40dp"
             android:padding="10dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -60,13 +60,14 @@
             android:id="@+id/view_right_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="100,000"
+            android:text="@string/text_right_value"
             android:textSize="40dp"
             android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view_right_valute"/>
 
-    <Button android:id="@+id/button_refresh"
+    <Button
+            android:id="@+id/view_button_refresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/text_button_refresh"
