--- a/app/src/main/res/layout-land/fragment.xml
+++ b/app/src/main/res/layout-land/fragment.xml
@@ -7,6 +7,8 @@
         android:layout_height="match_parent"
         tools:context=".ui.Fragment">
 
+
+
     <TextView
             android:id="@+id/view_title"
             android:layout_width="match_parent"
@@ -15,57 +17,69 @@
             android:textSize="25dp"
             android:gravity="center"
             android:padding="20dp"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-            android:id="@+id/view_left_valute"
-            android:layout_width="wrap_content"
-            android:layout_height="67dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
+            android:layout_marginBottom="172dp"/>
+    <Spinner
+            android:id="@+id/view_left_spinner_valute"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:text="@string/text_left_valute"
-            android:textSize="20dp"
-            android:padding="20dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
-            android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/view_title"
-            app:layout_constraintVertical_bias="0.0"/>
+            android:textSize="15dp"
+            android:padding="10dp"
+            android:gravity="center"
 
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="@+id/view_right_valute"
+            app:layout_constraintBottom_toTopOf="@+id/view_left_value" android:layout_marginBottom="12dp"/>
     <TextView
             android:id="@+id/view_right_valute"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/text_right_valute"
-            android:textSize="20dp"
-            android:padding="20dp"
-            app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
-            android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/view_title"
-            app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:textSize="15dp"
+            android:padding="10dp"
+            app:layout_constraintHorizontal_weight="1"
+            android:gravity="center"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/view_left_spinner_valute"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintBottom_toBottomOf="@+id/view_left_spinner_valute"
+            app:layout_constraintTop_toTopOf="@+id/view_left_spinner_valute"/>
+
 
     <TextView
             android:id="@+id/view_left_value"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/text_left_value"
             android:textSize="40dp"
             android:padding="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view_left_valute"/>
+            android:gravity="center"
 
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="@+id/view_right_value"
+            android:layout_marginBottom="4dp"/>
     <TextView
             android:id="@+id/view_right_value"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/text_right_value"
             android:textSize="40dp"
             android:padding="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view_right_valute"/>
+            android:gravity="center"
 
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/view_left_value"
+            app:layout_constraintHorizontal_bias="0.5"
+            android:layout_marginBottom="8dp" app:layout_constraintTop_toTopOf="@+id/view_left_value"
+            app:layout_constraintBottom_toBottomOf="@+id/view_left_value" app:layout_constraintVertical_bias="0.0"/>
     <Button
             android:id="@+id/view_button_refresh"
             android:layout_width="wrap_content"
@@ -73,10 +87,7 @@
             android:text="@string/text_button_refresh"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view_title"
-            app:layout_constraintVertical_bias="0.685"/>
-
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="36dp"/>
     <ProgressBar
             android:id="@+id/progress_bar"
             android:visibility="invisible"
