--- a/app/src/main/res/layout/fragment.xml
+++ b/app/src/main/res/layout/fragment.xml
@@ -7,6 +7,7 @@
         android:layout_height="match_parent"
         tools:context=".ui.Fragment">
 
+
     <TextView
             android:id="@+id/view_title"
             android:layout_width="match_parent"
@@ -17,54 +18,83 @@
             android:padding="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="52dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_marginTop="36dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"/>
 
-    <TextView
-            android:id="@+id/view_left_valute"
-            android:layout_width="wrap_content"
+
+
+
+
+    <Spinner
+            android:id="@+id/view_left_spinner_valute"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/text_left_valute"
             android:textSize="15dp"
-            android:padding="20dp"
+            android:padding="10dp"
+            android:gravity="center"
+
+            app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
             android:layout_marginTop="99dp"
             app:layout_constraintTop_toBottomOf="@+id/view_title"
-            app:layout_constraintVertical_bias="0.0"/>
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="@+id/view_right_valute"/>
+
 
     <TextView
             android:id="@+id/view_right_valute"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/text_right_valute"
             android:textSize="15dp"
-            android:padding="20dp"
-            app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
-            android:layout_marginTop="99dp"
-            app:layout_constraintTop_toBottomOf="@+id/view_title"
-            app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:padding="10dp"
+            app:layout_constraintHorizontal_weight="1"
+            android:gravity="center"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/view_left_spinner_valute"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintBottom_toBottomOf="@+id/view_left_spinner_valute"
+            app:layout_constraintTop_toTopOf="@+id/view_left_spinner_valute"/>
+
+
+
+
 
     <TextView
             android:id="@+id/view_left_value"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/text_left_value"
             android:textSize="40dp"
             android:padding="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view_left_valute"/>
+            android:gravity="center"
 
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="@+id/view_right_value"
+            android:layout_marginBottom="24dp"/>
     <TextView
             android:id="@+id/view_right_value"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/text_right_value"
             android:textSize="40dp"
             android:padding="10dp"
+            android:gravity="center"
+
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view_right_valute"/>
+            app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
+            app:layout_constraintStart_toEndOf="@+id/view_left_value"
+            app:layout_constraintHorizontal_bias="0.5"
+            android:layout_marginBottom="24dp"/>
+
+
+
+
 
     <Button
             android:id="@+id/view_button_refresh"
@@ -75,8 +105,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view_title"
-            app:layout_constraintVertical_bias="0.685"/>
-
+            app:layout_constraintVertical_bias="0.741"/>
     <ProgressBar
             android:id="@+id/progress_bar"
             android:visibility="invisible"
@@ -87,5 +116,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="1.0"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
