--- a/app/src/main/res/layout-land/fragment.xml
+++ b/app/src/main/res/layout-land/fragment.xml
@@ -8,49 +8,69 @@
         tools:context=".ui.Fragment">
 
 
-
     <TextView
             android:id="@+id/view_title"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/text_title"
             android:textSize="25dp"
             android:gravity="center"
             android:padding="20dp"
+            android:layout_margin="20dp"
+            android:background="@android:drawable/editbox_dropdown_light_frame"
+
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
-            android:layout_marginBottom="172dp"/>
+            app:layout_constraintBottom_toTopOf="@+id/view_left_spinner_valute"
+            android:layout_marginBottom="140dp"/>
+
+
     <Spinner
             android:id="@+id/view_left_spinner_valute"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             android:textSize="15dp"
             android:padding="10dp"
             android:gravity="center"
+            android:layout_margin="5dp"
+
+            android:background="@android:drawable/editbox_dropdown_light_frame"
+
 
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toStartOf="@+id/view_right_valute"
-            app:layout_constraintBottom_toTopOf="@+id/view_left_value" android:layout_marginBottom="12dp"/>
+            app:layout_constraintBottom_toTopOf="@+id/view_left_value"/>
     <TextView
             android:id="@+id/view_right_valute"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             android:text="@string/text_right_valute"
             android:textSize="15dp"
             android:padding="10dp"
+            android:layout_margin="5dp"
+
             app:layout_constraintHorizontal_weight="1"
             android:gravity="center"
+
+            android:background="@android:drawable/editbox_dropdown_light_frame"
+
 
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/view_left_spinner_valute"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintBottom_toBottomOf="@+id/view_left_spinner_valute"
             app:layout_constraintTop_toTopOf="@+id/view_left_spinner_valute"/>
-
-
+    <Button
+            android:id="@+id/view_button_refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_button_refresh"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="4dp"/>
     <TextView
             android:id="@+id/view_left_value"
             android:layout_width="0dp"
@@ -60,11 +80,14 @@
             android:padding="10dp"
             android:gravity="center"
 
+            android:layout_margin="5dp"
+
+            android:background="@android:drawable/editbox_dropdown_light_frame"
+
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toStartOf="@+id/view_right_value"
-            android:layout_marginBottom="4dp"/>
+            app:layout_constraintEnd_toStartOf="@+id/view_right_value"/>
     <TextView
             android:id="@+id/view_right_value"
             android:layout_width="0dp"
@@ -74,19 +97,14 @@
             android:padding="10dp"
             android:gravity="center"
 
+            android:layout_margin="5dp"
+
+            android:background="@android:drawable/editbox_dropdown_light_frame"
+
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/view_button_refresh"
             app:layout_constraintStart_toEndOf="@+id/view_left_value"
-            app:layout_constraintHorizontal_bias="0.5"
-            android:layout_marginBottom="8dp" app:layout_constraintTop_toTopOf="@+id/view_left_value"
-            app:layout_constraintBottom_toBottomOf="@+id/view_left_value" app:layout_constraintVertical_bias="0.0"/>
-    <Button
-            android:id="@+id/view_button_refresh"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/text_button_refresh"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="36dp"/>
+            app:layout_constraintHorizontal_bias="0.5"/>
     <ProgressBar
             android:id="@+id/progress_bar"
             android:visibility="invisible"
