--- a/app/src/main/res/drawable/custom_round_button.xml
+++ b/app/src/main/res/drawable/custom_round_button.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item>
+    <item android:state_enabled="true">
         <shape android:shape="rectangle">
-
             <solid android:color="@color/cardview_light_background"/>
             <size android:height="60dp" android:width="60dp"/>
-
             <corners android:radius="30dp"/>
             <stroke android:color="@color/colorPrimary"
                     android:width="1dp"/>
-
         </shape>
-
     </item>
+
+    <item android:state_enabled="false">
+        <shape android:shape="rectangle">
+            <solid android:color="@android:color/darker_gray"/>
+            <size android:height="60dp" android:width="60dp"/>
+            <corners android:radius="30dp"/>
+            <stroke android:color="@color/colorPrimary"
+                    android:width="1dp"/>
+        </shape>
+    </item>
+
+
 
 </selector>
